checkin for styling shopping list

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       crossorigin="anonymous"
     />
 
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Righteous"
+      rel="stylesheet"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
