fonts added for now

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,19 @@
     />
 
     <link
-      href="https://fonts.googleapis.com/css?family=Lato|Righteous"
+      href="https://fonts.googleapis.com/css?family=Baloo+Thambi"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css?family=Francois+One"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Sans+Pro"
+      rel="stylesheet"
+    />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
