--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>GoCery</title>
+    <meta
+      name="description"
+      content="Breeze through your grocery shopping by using and sharing aisle information."
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
